# mib2zabbix

./: README.md  pyproject.toml
src/mib2zabbix/: 01-example.py  __init__.py  cli.py  utils.py
test/: CAMBIUM-ePMP-5.9.1-MIB.mib
